<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="package_name">info.clockworksapple.android.barsearch</string>
	<string
		name="class_name_mainmenu">info.clockworksapple.android.barsearch.app.MainMenuActivity
	</string>
	<string
		name="class_name_preference">info.clockworksapple.android.barsearch.app.Preference</string>
	<string
		name="hello">Hello World, MainMenu!</string>
	<string
		name="app_name">ＢＡＲ探</string>
	<string
		name="tab_menu_01">位置情報</string>
	<string
		name="tab_menu_02">駅名</string>
	<string
		name="select_station">駅名から選択</string>
	<string
		name="button_search">検索</string>
	<string
		name="button_ok">ＯＫ</string>
	<string
		name="button_close">閉じる</string>
	<string
		name="button_cancel">キャンセル</string>
	<string
		name="button_tweet_list">Tweet一覧</string>
	<string
		name="button_tweet_post">Tweet送信</string>
	<string
		name="button_tweet_post_send">送信</string>
	<string
		name="button_get_bin_code">PINコード取得</string>
	<string
		name="button_entry_bin_code">PINコード登録</string>
	<string
		name="button_preference">設定</string>
	<string
		name="button_end">終了</string>
	<string
		name="option_close">閉じる</string>
	<string
		name="option_back">戻る</string>
	<string
		name="activity_animation_duration">300</string>
	<string
		name="radio_station">駅名で検索</string>
	<string
		name="radio_gps">現在位置で検索</string>
	<string
		name="data_loading">データを取得しています</string>
	<string
		name="pref_title">検索設定</string>
	<string
		name="pref_search_type_key">pref_search_type_key</string>
	<string
		name="pref_search_type_title">検索タイプ</string>
	<string
		name="pref_search_type_dialog_title">検索タイプ設定</string>
	<string
		name="pref_bar_type_key">pref_bar_type_key</string>
	<string
		name="pref_bar_type_title">バータイプ</string>
	<string
		name="pref_bar_type_dialog_title">バータイプ設定</string>
	<string
		name="pref_prefecture_key">pref_prefecture_key</string>
	<string
		name="pref_prefecture_title">都道府県</string>
	<string
		name="pref_prefecture_dialog_title">都道府県設定</string>
	<string
		name="pref_consumer_key">pref_consumer_key</string>
	<string
		name="pref_consumer_secret">pref_consumer_secret</string>
	<string
		name="pref_access_token">pref_access_token</string>
	<string
		name="pref_access_token_secret">pref_access_token_secret</string>
	<string
		name="str_bar_type_01">静かなバー</string>
	<string
		name="str_bar_type_02">遊べるバー</string>
	<string
		name="str_bar_type_03">聞けるバー</string>
	<string
		name="str_bar_type_04">ガールズバー</string>
	<string
		name="str_credit_01">Powerd By</string>
	<string
		name="str_credit_02">、HeartRails Express</string>
	<string
		name="str_credit_03">、Twitter</string>
	<string
		name="str_overlay_text_tel">TEL：</string>
	<string
		name="str_overlay_text_detail">詳細：</string>
	<string
		name="str_overlay_text_s_kakko">【</string>
	<string
		name="str_overlay_text_c_kakko">】</string>
	<string
		name="str_overlay_text_kara">～</string>
	<string
		name="str_overlay_text_credit">【画像提供：BAR-NAVI by SUNTORY】</string>
	<string
		name="str_station">駅</string>
	<string
		name="str_lat_north">北緯：</string>
	<string
		name="str_lat_south">南緯：</string>
	<string
		name="str_lng_east">東経：</string>
	<string
		name="str_lng_west">西経：</string>
	<string
		name="str_location_unit">°</string>
	<string
		name="str_shuuhen">周辺</string>
	<string
		name="str_shop_unit">件</string>
	<string
		name="str_detail">詳細</string>
	<string
		name="str_message_01"
		formatted="false"> 『%s』には該当する店舗が%s件あるらしいよ</string>
	<string
		name="str_message_02"
		formatted="false"> 『%s』には該当する店舗が無いらしいよ</string>
	<string
		name="str_message_03"
		formatted="false"> そこは『%s』さんだよ</string>
	<string
		name="dialog_err_title_01">現在地取得失敗</string>
	<string
		name="dialog_err_msg_01">位置情報が取得できませんでした。GPSが有効か確認してください</string>
	<string
		name="dialog_err_title_02">ユーザ情報取得失敗</string>
	<string
		name="dialog_err_msg_02">Twitterのユーザ情報が取得できませんでした。設定を確認してください</string>
	<string
		name="dialog_title_tweet_post">メッセージ送信</string>
	<string
		name="dialog_msg_tweet_post_success">Tweetの送信に成功しました</string>
	<string
		name="dialog_msg_tweet_post_failure">Tweetの送信に失敗しました</string>
	<string
		name="dialog_title_oauth_entry">ユーザー認証</string>
	<string
		name="dialog_msg_oauth_entry_success">認証成功</string>
	<string
		name="dialog_msg_oauth_entry_failure">認証失敗</string>
	<string
		name="dialog_title_main_menu_end">アプリ終了</string>
	<string
		name="dialog_msg_main_menu_end">アプリを終了します。よろしいですか？</string>
	<string
		name="dialog_msg_load_tweets">ツィート取得中...</string>
	<string
		name="dialog_msg_post_tweets">ツィート送信中...</string>
	<string
		name="dialog_msg_get_url">認証コード取得中...</string>
	<string
		name="dialog_msg_post_pincode">認証コード送信中...</string>
	<string
		name="dialog_msg_load_shops">バー情報取得中...</string>
	<string
		name="twitter_url">http://search.twitter.com/search.atom?q=#barsearchdroid</string>
	<string
		name="nodata">該当するデータがありません</string>
	<string
		name="tweet_post_hint">%s文字まで入力できます</string>
	<string
		name="tweet_hash_tag">#barsearchdroid</string>
	<string
		name="window_title_tweet_list">Tweet一覧</string>
	<string
		name="window_title_tweet_post">Tweet送信</string>
	<string
		name="button_start">ＳＴＡＲＴ</string>
	<string
		name="main_title_title">ＢＡＲ探</string>
	<string
		name="main_title_subtitle">BarSearchDroid</string>
</resources>