<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/pref_title">
		<ListPreference
			android:key="@string/pref_search_type_key"
			android:summary=""
			android:title="@string/pref_search_type_title"
			android:dialogTitle="@string/pref_search_type_dialog_title"
			android:entries="@array/pref_search_type_entries"
			android:entryValues="@array/pref_search_type_values" />
		<ListPreference
			android:key="@string/pref_bar_type_key"
			android:summary=""
			android:title="@string/pref_bar_type_title"
			android:dialogTitle="@string/pref_bar_type_dialog_title"
			android:entries="@array/pref_bar_type_entries"
			android:entryValues="@array/pref_bar_type_values" />
		<ListPreference
			android:key="@string/pref_prefecture_key"
			android:summary=""
			android:title="@string/pref_prefecture_title"
			android:dialogTitle="@string/pref_prefecture_dialog_title"
			android:entries="@array/pref_prefecture_entries"
			android:entryValues="@array/pref_prefecture_values" />
	</PreferenceCategory>
</PreferenceScreen>