<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<ListView
		android:id="@+id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" />
	<TextView
		android:id="@+id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/nodata"></TextView>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip">
		<Button
			android:id="@+id/button_tweet_post"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_tweet_post"
			android:drawableLeft="@drawable/ic_menu_edit_01"></Button>
		<Button
			android:id="@+id/button_close"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_close"
			android:drawableLeft="@drawable/ic_notification_clear_all"></Button>
	</LinearLayout>
</LinearLayout>