<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<EditText
		android:id="@+id/edit_text_bin_code"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="number"
		android:textSize="16dip" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip">
			<Button
				android:id="@+id/button_get_bin_code"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/button_get_bin_code"></Button>
			<Button
				android:id="@+id/button_entry_bin_code"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/button_entry_bin_code"></Button>
		</LinearLayout>
		<Button
			android:id="@+id/button_input_oauth_close"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_close"
			android:drawableLeft="@drawable/ic_notification_clear_all"></Button>
	</LinearLayout>
</LinearLayout>