<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_gravity="center"
		android:layout_marginTop="60dip">
		<ImageView
			android:id="@+id/Imageview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/bsd_icon_03" />
		<TextView
			android:id="@+id/main_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:textSize="26dip"
			android:textScaleX="1.25"
			android:textStyle="bold"
			android:textColor="@color/blue"
			android:text="@string/main_title_title"></TextView>
		<TextView
			android:id="@+id/sub_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="30dip"
			android:gravity="center"
			android:textSize="15dip"
			android:text="@string/main_title_subtitle"></TextView>
		<Button
			android:id="@+id/button_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="40dip"
			android:paddingRight="40dip"
			android:text="@string/button_start"></Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:orientation="vertical"
		android:layout_weight="1">
		<TextView
			android:id="@+id/text_view_powered"
			android:layout_marginBottom="3dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center" />
		<TextView
			android:id="@+id/text_view_credit"
			android:layout_marginBottom="3dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center" />
	</LinearLayout>
</LinearLayout>